--- a/www-apps/bugport/ChangeLog
+++ b/www-apps/bugport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/bugport
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/bugport/Attic/ChangeLog,v 1.3 2007/02/22 00:28:38 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/bugport/Attic/ChangeLog,v 1.4 2007/05/15 14:20:17 bangert Exp $
+
+  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
+  add <herd>no-herd</herd>
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
