--- a/dev-java/commons-fileupload/ChangeLog
+++ b/dev-java/commons-fileupload/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-fileupload
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-fileupload/ChangeLog,v 1.35 2007/05/07 15:20:16 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-fileupload/ChangeLog,v 1.36 2007/05/15 14:26:50 betelgeuse Exp $
+
+  15 May 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
+  commons-fileupload-1.1.1.ebuild, commons-fileupload-1.2.ebuild:
+  Move the overly long DESCRIPTION to metadata.xml os longdescription.
 
   07 May 2007; Vlastimil Babka <caster@gentoo.org>
   commons-fileupload-1.2.ebuild:
