--- a/x11-misc/googleearth/ChangeLog
+++ b/x11-misc/googleearth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/googleearth
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/googleearth/Attic/ChangeLog,v 1.27 2007/04/14 21:43:02 welp Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/googleearth/Attic/ChangeLog,v 1.28 2007/05/15 14:24:19 bangert Exp $
+
+  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
+  add <herd>no-herd</herd>
 
   14 Apr 2007; <welp@gentoo.org> googleearth-4.ebuild:
   Stable on amd64 wrt bug 174605
