--- a/xfce-base/libxfce4util/ChangeLog
+++ b/xfce-base/libxfce4util/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/libxfce4util
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.87 2007/04/12 14:42:13 nichoj Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.88 2007/05/15 17:50:53 gustavoz Exp $
+
+  15 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  libxfce4util-4.4.1.ebuild:
+  Stable on sparc wrt #178510
 
 *libxfce4util-4.4.1 (11 Apr 2007)
 
