--- a/dev-util/devhelp/ChangeLog
+++ b/dev-util/devhelp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/devhelp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/devhelp/ChangeLog,v 1.46 2007/05/15 20:31:50 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/devhelp/ChangeLog,v 1.47 2007/05/15 20:34:29 compnerd Exp $
+
+  15 May 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  -devhelp-0.12.ebuild:
+  Prune unused versions
 
 *devhelp-0.14 (15 May 2007)
 
