--- a/x11-misc/shared-mime-info/ChangeLog
+++ b/x11-misc/shared-mime-info/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/shared-mime-info
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.81 2007/05/15 15:47:39 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.82 2007/05/16 02:00:37 beandog Exp $
+
+  16 May 2007; Steve Dibb <beandog@gentoo.org> shared-mime-info-0.20.ebuild:
+  amd64 stable, bug 178553
 
   15 May 2007; Raúl Porcel <armin76@gentoo.org>
   shared-mime-info-0.20.ebuild:
