--- a/dev-ruby/highline/ChangeLog
+++ b/dev-ruby/highline/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/highline
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/highline/ChangeLog,v 1.4 2007/03/13 20:07:57 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/highline/ChangeLog,v 1.5 2007/05/16 06:12:44 robbat2 Exp $
+
+  16 May 2007; Robin H. Johnson <robbat2@gentoo.org> highline-1.2.0.ebuild:
+  Works on ~ppc and ~amd64.
 
   13 Mar 2007; Tom Gall <tgall@gentoo.org> highline-1.2.0.ebuild:
   added ~ppc64
