--- a/mail-client/claws-mail-perl/ChangeLog
+++ b/mail-client/claws-mail-perl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/claws-mail-perl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-perl/ChangeLog,v 1.7 2007/05/12 15:28:58 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-perl/ChangeLog,v 1.8 2007/05/16 07:51:13 opfer Exp $
+
+  16 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  claws-mail-perl-0.9.8.ebuild:
+  stable amd64, bug 177905
 
   12 May 2007; Markus Rothe <corsair@gentoo.org>
   claws-mail-perl-0.9.8.ebuild:
