--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.378 2007/05/16 04:50:50 pythonhead Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.379 2007/05/16 12:34:00 betelgeuse Exp $
+
+  16 May 2007; Petteri Räty <betelgeuse@gentoo.org> use.local.desc:
+  Add old-daemons and test-programs local use flags for net-wireless/bluez-utils.
 
   16 May 2007; Rob Cakebread <pythonhead@gentoo.org> package.mask:
   Removed from package.mask bug #167897
