--- a/net-irc/pisg/ChangeLog
+++ b/net-irc/pisg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/pisg
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/pisg/ChangeLog,v 1.51 2007/04/10 17:19:17 welp Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/pisg/ChangeLog,v 1.52 2007/05/16 20:46:38 armin76 Exp $
+
+  16 May 2007; Raúl Porcel <armin76@gentoo.org> pisg-0.71.ebuild:
+  x86 stable wrt #178804
 
 *pisg-0.71 (10 Apr 2007)
 
