--- a/net-p2p/gift-ares/ChangeLog
+++ b/net-p2p/gift-ares/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/gift-ares
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/gift-ares/ChangeLog,v 1.13 2007/04/22 01:40:56 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/gift-ares/ChangeLog,v 1.14 2007/05/16 21:25:52 mabi Exp $
+
+  15 May 2007; Matti Bickel <mabi@gentoo.org> gift-ares-0.3.0-r1.ebuild:
+  keyworded ~ppc (bug #174858)
 
   22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
   gift-ares-0.3.0-r1.ebuild:
