--- a/app-admin/eselect-rails/ChangeLog
+++ b/app-admin/eselect-rails/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-rails
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.12 2008/05/11 16:50:36 fmccor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.13 2008/05/12 09:38:30 corsair Exp $
+
+  12 May 2008; Markus Rothe <corsair@gentoo.org> eselect-rails-0.11.ebuild:
+  Stable on ppc64; bug #221309
 
   11 May 2008; Ferris McCormick <fmccor@gentoo.org>
   eselect-rails-0.11.ebuild:
