--- a/dev-ruby/activeresource/ChangeLog
+++ b/dev-ruby/activeresource/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/activeresource
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.6 2008/05/11 16:58:05 fmccor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activeresource/ChangeLog,v 1.7 2008/05/12 09:41:15 corsair Exp $
+
+  12 May 2008; Markus Rothe <corsair@gentoo.org>
+  activeresource-2.0.2.ebuild:
+  Stable on ppc64; bug #221309
 
   11 May 2008; Ferris McCormick <fmccor@gentoo.org>
   activeresource-2.0.2.ebuild:
