--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.57 2008/05/11 16:57:36 fmccor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.58 2008/05/12 09:39:59 corsair Exp $
+
+  12 May 2008; Markus Rothe <corsair@gentoo.org> activesupport-2.0.2.ebuild:
+  Stable on ppc64; bug #221309
 
   11 May 2008; Ferris McCormick <fmccor@gentoo.org>
   activesupport-2.0.2.ebuild:
