--- a/media-sound/snd/ChangeLog
+++ b/media-sound/snd/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/snd
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/snd/ChangeLog,v 1.40 2008/05/12 09:30:39 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/snd/ChangeLog,v 1.41 2008/05/12 09:50:29 aballier Exp $
+
+*snd-9.9 (12 May 2008)
+
+  12 May 2008; Alexis Ballier <aballier@gentoo.org> +snd-9.9.ebuild:
+  version bump
 
   12 May 2008; Alexis Ballier <aballier@gentoo.org> -snd-9.2.ebuild:
   remove unused version
