--- a/x11-misc/xtrlock/ChangeLog
+++ b/x11-misc/xtrlock/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xtrlock
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.13 2008/05/12 11:41:05 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.14 2008/05/12 13:40:44 opfer Exp $
+
+  12 May 2008; Christian Faulhammer <opfer@gentoo.org>
+  xtrlock-2.0-r2.ebuild:
+  stable x86, bug 221439
 
   12 May 2008; nixnut <nixnut@gentoo.org> xtrlock-2.0-r2.ebuild:
   Stable on ppc wrt bug 221439
