--- a/media-sound/mpfc/ChangeLog
+++ b/media-sound/mpfc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpfc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpfc/ChangeLog,v 1.21 2008/05/12 13:34:02 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpfc/ChangeLog,v 1.22 2008/05/12 15:57:45 maekke Exp $
+
+  12 May 2008; Markus Meier <maekke@gentoo.org> mpfc-1.3.7-r1.ebuild:
+  amd64 stable, bug #216938
 
   12 May 2008; Christian Faulhammer <opfer@gentoo.org> mpfc-1.3.7-r1.ebuild:
   stable x86, bug 216938
