--- a/x11-themes/qtcurve/ChangeLog
+++ b/x11-themes/qtcurve/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/qtcurve
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/qtcurve/Attic/ChangeLog,v 1.26 2008/05/04 00:19:40 yngwin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/qtcurve/Attic/ChangeLog,v 1.27 2008/05/12 16:30:21 maekke Exp $
+
+  12 May 2008; Markus Meier <maekke@gentoo.org> qtcurve-0.57.1.ebuild:
+  amd64 stable, bug #218435
 
 *qtcurve-0.59.1 (03 May 2008)
 
