--- a/media-video/vdr/ChangeLog
+++ b/media-video/vdr/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/vdr
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vdr/ChangeLog,v 1.112 2008/04/23 16:33:42 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vdr/ChangeLog,v 1.113 2008/05/12 17:15:34 zzam Exp $
+
+  12 May 2008; Matthias Schwarzott <zzam@gentoo.org> vdr-1.4.6.ebuild,
+  vdr-1.4.7-r10.ebuild, vdr-1.6.0.ebuild, vdr-1.6.0-r1.ebuild,
+  vdr-1.6.0-r2.ebuild, vdr-1.6.0_p1.ebuild:
+  Fix DEPEND and RDEPEND. Move unifdef to be only DEPEND, Bug #221531.
 
   23 Apr 2008; Matthias Schwarzott <zzam@gentoo.org> vdr-1.4.6.ebuild,
   vdr-1.4.7-r10.ebuild, vdr-1.6.0.ebuild, vdr-1.6.0-r1.ebuild,
