--- a/x11-misc/xlockmore/ChangeLog
+++ b/x11-misc/xlockmore/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xlockmore
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.66 2008/02/14 11:27:47 drac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.67 2008/05/12 18:31:14 corsair Exp $
+
+  12 May 2008; Markus Rothe <corsair@gentoo.org> xlockmore-5.25.ebuild:
+  Stable on ppc64
 
   14 Feb 2008; Samuli Suominen <drac@gentoo.org> xlockmore-5.25.ebuild:
   amd64 stable
