--- a/kde-base/kmailcvt/ChangeLog
+++ b/kde-base/kmailcvt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmailcvt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kmailcvt/Attic/ChangeLog,v 1.74 2008/05/12 20:01:42 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kmailcvt/Attic/ChangeLog,v 1.75 2008/05/12 21:13:38 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> kmailcvt-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kmailcvt-3.5.9.ebuild:
   Marking kmailcvt-3.5.9 ppc stable for bug 221063
