--- a/kde-base/libksieve/ChangeLog
+++ b/kde-base/libksieve/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/libksieve
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/libksieve/Attic/ChangeLog,v 1.62 2008/05/12 20:03:25 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/libksieve/Attic/ChangeLog,v 1.63 2008/05/12 21:15:21 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> libksieve-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> libksieve-3.5.9.ebuild:
   Marking libksieve-3.5.9 ppc stable for bug 221063
