--- a/kde-base/mimelib/ChangeLog
+++ b/kde-base/mimelib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/mimelib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mimelib/Attic/ChangeLog,v 1.79 2008/05/12 20:02:01 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mimelib/Attic/ChangeLog,v 1.80 2008/05/12 21:06:34 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> mimelib-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> mimelib-3.5.9.ebuild:
   Marking mimelib-3.5.9 ppc stable for bug 221063
