--- a/kde-base/kate/ChangeLog
+++ b/kde-base/kate/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kate
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kate/ChangeLog,v 1.105 2008/05/12 20:01:17 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kate/ChangeLog,v 1.106 2008/05/12 21:23:56 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> kate-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kate-3.5.9.ebuild:
   Marking kate-3.5.9 ppc stable for bug 221063
