--- a/kde-base/kde-i18n/ChangeLog
+++ b/kde-base/kde-i18n/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde-i18n
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kde-i18n/Attic/ChangeLog,v 1.155 2008/05/12 20:01:20 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kde-i18n/Attic/ChangeLog,v 1.156 2008/05/12 21:35:34 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> kde-i18n-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kde-i18n-3.5.9.ebuild:
   Marking kde-i18n-3.5.9 ppc stable for bug 221063
