--- a/kde-base/kdepim-kioslaves/ChangeLog
+++ b/kde-base/kdepim-kioslaves/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdepim-kioslaves
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim-kioslaves/Attic/ChangeLog,v 1.100 2008/05/12 20:01:54 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdepim-kioslaves/Attic/ChangeLog,v 1.101 2008/05/12 22:44:32 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org>
+  kdepim-kioslaves-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org>
   kdepim-kioslaves-3.5.9.ebuild:
