--- a/kde-base/kdeartwork-kwin-styles/ChangeLog
+++ b/kde-base/kdeartwork-kwin-styles/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-kwin-styles
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-kwin-styles/Attic/ChangeLog,v 1.82 2008/05/12 20:02:47 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-kwin-styles/Attic/ChangeLog,v 1.83 2008/05/12 22:57:06 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org>
+  kdeartwork-kwin-styles-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org>
   kdeartwork-kwin-styles-3.5.9.ebuild:
