--- a/kde-base/kdeprint/ChangeLog
+++ b/kde-base/kdeprint/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeprint
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeprint/Attic/ChangeLog,v 1.90 2008/05/12 20:01:48 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeprint/Attic/ChangeLog,v 1.91 2008/05/12 22:57:37 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> kdeprint-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kdeprint-3.5.9.ebuild:
   Marking kdeprint-3.5.9 ppc stable for bug 221063
