--- a/kde-base/kget/ChangeLog
+++ b/kde-base/kget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kget
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kget/ChangeLog,v 1.87 2008/05/12 20:03:38 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kget/ChangeLog,v 1.88 2008/05/12 23:11:11 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> kget-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kget-3.5.9.ebuild:
   Marking kget-3.5.9 ppc stable for bug 221063
