--- a/kde-base/ktimer/ChangeLog
+++ b/kde-base/ktimer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ktimer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktimer/ChangeLog,v 1.86 2008/05/12 20:03:13 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktimer/ChangeLog,v 1.87 2008/05/13 00:00:13 jer Exp $
+
+  12 May 2008; Jeroen Roovers <jer@gentoo.org> ktimer-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> ktimer-3.5.9.ebuild:
   Marking ktimer-3.5.9 ppc stable for bug 221063
