--- a/sys-cluster/pvfs2/ChangeLog
+++ b/sys-cluster/pvfs2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/pvfs2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/pvfs2/Attic/ChangeLog,v 1.14 2008/04/21 14:52:57 jsbronder Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/pvfs2/Attic/ChangeLog,v 1.15 2008/05/13 00:15:02 jsbronder Exp $
+
+  13 May 2008; Justin Bronder <jsbronder@gentoo.org> pvfs2-2.7.0-r2.ebuild,
+  pvfs2-2.7.1.ebuild:
+  Update depends to not require doc building packages at runtime. (#221695)
 
   21 Apr 2008; Justin Bronder <jsbronder@gentoo.org> pvfs2-2.7.1.ebuild:
   Fix build error with 2.6.25 kernels (#218310).  Thanks to Michael Cramer for
