--- a/kde-base/eyesapplet/ChangeLog
+++ b/kde-base/eyesapplet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/eyesapplet
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/eyesapplet/Attic/ChangeLog,v 1.74 2008/05/12 20:03:10 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/eyesapplet/Attic/ChangeLog,v 1.75 2008/05/13 02:34:55 jer Exp $
+
+  13 May 2008; Jeroen Roovers <jer@gentoo.org> eyesapplet-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> eyesapplet-3.5.9.ebuild:
   Marking eyesapplet-3.5.9 ppc stable for bug 221063
