--- a/kde-base/ktux/ChangeLog
+++ b/kde-base/ktux/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ktux
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktux/ChangeLog,v 1.83 2008/05/12 20:01:25 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/ktux/ChangeLog,v 1.84 2008/05/13 02:35:22 jer Exp $
+
+  13 May 2008; Jeroen Roovers <jer@gentoo.org> ktux-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> ktux-3.5.9.ebuild:
   Marking ktux-3.5.9 ppc stable for bug 221063
