--- a/sys-boot/yaboot-static/ChangeLog
+++ b/sys-boot/yaboot-static/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-boot/yaboot-static
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/yaboot-static/ChangeLog,v 1.17 2008/01/04 01:10:17 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/yaboot-static/ChangeLog,v 1.18 2008/05/13 03:23:11 josejx Exp $
+
+  13 May 2008; Joseph Jezak <josejx@gentoo.org> yaboot-static-1.3.14.ebuild:
+  Added mac-fdisk as a dependency for bug #220431.
 
 *yaboot-static-1.3.14 (04 Jan 2008)
 
