--- a/x11-terms/roxterm/ChangeLog
+++ b/x11-terms/roxterm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-terms/roxterm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/roxterm/ChangeLog,v 1.28 2008/05/13 05:40:36 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/roxterm/ChangeLog,v 1.29 2008/05/13 05:42:12 compnerd Exp $
+
+  13 May 2008; Saleem Abdulrasool <compnerd@gentoo.org>
+  -roxterm-1.7.4.ebuild:
+  prune unused version
 
 *roxterm-1.11.1 (13 May 2008)
 
