--- a/app-admin/eselect-ctags/ChangeLog
+++ b/app-admin/eselect-ctags/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/eselect-ctags
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.9 2008/03/23 17:26:04 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.10 2008/05/13 10:52:12 ulm Exp $
+
+*eselect-ctags-1.4 (13 May 2008)
+
+  13 May 2008; Ulrich Mueller <ulm@gentoo.org> +eselect-ctags-1.4.ebuild:
+  Version bump.
 
   23 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> eselect-ctags-1.3.ebuild:
   Keyword ~mips for bug #202947.
