--- a/net-wireless/bluez-libs/ChangeLog
+++ b/net-wireless/bluez-libs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/bluez-libs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-libs/Attic/ChangeLog,v 1.103 2008/04/12 00:14:12 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-libs/Attic/ChangeLog,v 1.104 2008/05/13 13:01:32 betelgeuse Exp $
+
+  13 May 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
+  Remove proxy maintainer as he doesn't use Gentoo any more.
 
 *bluez-libs-3.30 (12 Apr 2008)
 
