--- a/dev-ruby/activerecord/ChangeLog
+++ b/dev-ruby/activerecord/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activerecord
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.74 2008/05/12 09:57:04 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.75 2008/05/13 13:38:24 armin76 Exp $
+
+  13 May 2008; Raúl Porcel <armin76@gentoo.org> activerecord-2.0.2.ebuild:
+  ia64 stable wrt #221309
 
   12 May 2008; Markus Rothe <corsair@gentoo.org> activerecord-2.0.2.ebuild:
   Stable on ppc64; bug #221309
