--- a/kde-base/kde-meta/ChangeLog
+++ b/kde-base/kde-meta/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde-meta
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kde-meta/ChangeLog,v 1.98 2008/05/12 20:03:37 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kde-meta/ChangeLog,v 1.99 2008/05/13 15:01:48 jer Exp $
+
+  13 May 2008; Jeroen Roovers <jer@gentoo.org> kde-meta-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kde-meta-3.5.9.ebuild:
   Marking kde-meta-3.5.9 ppc stable for bug 221063
