--- a/kde-base/kdetoys/ChangeLog
+++ b/kde-base/kdetoys/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdetoys
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdetoys/Attic/ChangeLog,v 1.200 2008/05/12 16:04:34 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdetoys/Attic/ChangeLog,v 1.201 2008/05/13 15:46:24 jer Exp $
+
+  13 May 2008; Jeroen Roovers <jer@gentoo.org> kdetoys-3.5.9.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kdetoys-3.5.9.ebuild:
   Marking kdetoys-3.5.9 ppc and ppc stable for bug 221063
