--- a/media-libs/sdl-ttf/ChangeLog
+++ b/media-libs/sdl-ttf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/sdl-ttf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/sdl-ttf/ChangeLog,v 1.44 2008/05/11 16:16:58 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/sdl-ttf/ChangeLog,v 1.45 2008/05/13 17:00:03 jer Exp $
+
+  13 May 2008; Jeroen Roovers <jer@gentoo.org> sdl-ttf-2.0.9.ebuild:
+  Stable for HPPA (bug #219728).
 
   11 May 2008; Markus Rothe <corsair@gentoo.org> sdl-ttf-2.0.9.ebuild:
   Stable on ppc64; bug #219728
